<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorscreenbg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dim10"
                android:paddingLeft="@dimen/dim5"
                android:text="@string/lbl_origin"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_bg"
                android:orientation="vertical"
                android:padding="@dimen/dim10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dim20"
                    android:paddingTop="@dimen/dim20">

                    <ImageView
                        android:id="@+id/imageviewlocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="@dimen/dim5"
                        android:src="@drawable/ic_location" />

                    <AutoCompleteTextView
                        android:id="@+id/actvorigincity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_toLeftOf="@+id/imageviewnavigate"
                        android:layout_toRightOf="@+id/imageviewlocation"
                        android:background="@android:color/white"
                        android:hint="@string/lbl_origincity"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/imageviewnavigate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="@dimen/dim5"
                        android:src="@drawable/ic_indicator" />

                    <include
                        layout="@layout/line"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/imageviewnavigate"
                        android:layout_alignLeft="@+id/actvorigincity"
                        android:layout_alignStart="@+id/actvorigincity"></include>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dim10"
                    android:paddingTop="@dimen/dim10">

                    <ImageView
                        android:id="@+id/imageviewcalender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="@dimen/dim5"
                        android:src="@drawable/ic_calender" />

                    <EditText
                        android:id="@+id/edittextdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_toRightOf="@+id/imageviewcalender"
                        android:background="@android:color/white"
                        android:hint="@string/lbl_origindate" />


                    <include
                        layout="@layout/line"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/imageviewcalender"
                        android:layout_alignLeft="@+id/edittextdate"
                        android:layout_alignStart="@+id/edittextdate"></include>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dim10"
                    android:paddingTop="@dimen/dim10">

                    <ImageView
                        android:id="@+id/imageviewdistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="@dimen/dim30"
                        android:src="@drawable/ic_distance" />


                    <TextView
                        android:id="@+id/edittextorigindistance"
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_toRightOf="@+id/imageviewdistance"
                        android:background="@android:color/white"
                        android:hint="@string/lbl_distancefrorigin" />


                    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                        android:id="@+id/seekBar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageviewdistance"
                        android:layout_alignLeft="@+id/edittextorigindistance"
                        android:layout_alignStart="@+id/edittextorigindistance"
                        android:paddingLeft="-1dp"
                        android:paddingRight="-1dp"
                        app:dsb_max="100"
                        app:dsb_min="0" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dim10"
                android:paddingLeft="@dimen/dim5"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/lbl_destination"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_bg"
                android:orientation="vertical"
                android:padding="@dimen/dim10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dim20"
                    android:paddingTop="@dimen/dim20">

                    <ImageView
                        android:id="@+id/imageviewdesinationlocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="@dimen/dim5"
                        android:src="@drawable/ic_location" />

                    <AutoCompleteTextView
                        android:id="@+id/actvdestinationcity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_toRightOf="@+id/imageviewdesinationlocation"
                        android:background="@android:color/white"
                        android:hint="@string/lbl_destinationcity"
                        android:singleLine="true" />


                    <include
                        layout="@layout/line"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/imageviewdesinationlocation"
                        android:layout_alignLeft="@+id/actvdestinationcity"
                        android:layout_alignStart="@+id/actvdestinationcity"></include>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dim10"
                    android:paddingTop="@dimen/dim10">

                    <ImageView
                        android:id="@+id/imageviewdistancedestination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingBottom="@dimen/dim30"
                        android:src="@drawable/ic_distance" />

                    <TextView
                        android:id="@+id/edittextdistancedestination"
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_toRightOf="@+id/imageviewdistancedestination"
                        android:background="@android:color/white"
                        android:hint="@string/lbl_distancefromdestination" />


                    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageviewdistancedestination"
                        android:layout_alignLeft="@+id/edittextdistancedestination"
                        android:layout_alignStart="@+id/edittextdistancedestination"
                        android:paddingLeft="-1dp"
                        android:paddingRight="-1dp"
                        app:dsb_max="100"
                        app:dsb_min="0"

                        />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />
</LinearLayout>
